--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.* linguist-language=PHP
+*.php linguist-detectable=true
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.css linguist-detectable=false
